--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.ingoskr.eminen.enelmoment"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         // Enabling multidex support.
@@ -26,19 +26,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation  fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.google.android.gms:play-services:9.8.0'
-    compile 'com.android.support:multidex:1.0.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4.+'
-    compile 'me.dm7.barcodescanner:zbar:1.9'
-    compile 'com.roughike:bottom-bar:2.0.2'
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:design:26.0.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.android.support:recyclerview-v7:26.0.0'
+    implementation 'com.android.support:cardview-v7:26.0.0'
+    implementation 'com.google.android.gms:play-services:9.8.0'
+    implementation 'com.android.support:multidex:1.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.4.+'
+    implementation 'me.dm7.barcodescanner:zbar:1.9'
+    implementation 'com.roughike:bottom-bar:2.0.2'
 
-    testCompile 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
 }
