--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Nov 10 08:53:20 COT 2016
-systemProp.http.proxyHost=proxy2.sena.edu.co
-systemProp.http.nonProxyHosts=localhost
-systemProp.http.proxyPort=80
+#systemProp.http.proxyHost=proxy2.sena.edu.co
+#systemProp.http.nonProxyHosts=localhost
+#systemProp.http.proxyPort=80
